--- a/ja/index.html
+++ b/ja/index.html
@@ -80,19 +80,20 @@
             </div>
             <!-- 取引先 -->
             <div class="info-item">
-              <dt class="label">取引先</dt>
-              <dd class="value">株式会社KNOT DATA</dd>
+              <dt class="label">取引銀行</dt>
+              <dd class="value">PayPay銀行</dd>
             </div>
             <!-- 取り組み事例 -->
             <div class="info-item">
               <dt class="label">取り組み事例</dt>
               <dd class="value">
                 <ul>
-                  <li>クローズド環境での検索拡張生成（RAG）システムのPoC</li>
-                  <li>クローズド環境での文章要約タスクのPoC</li>
+                  <li>クローズド環境での検索拡張生成（RAG）システムの概念実証</li>
+                  <li>クローズド環境での文章要約タスクの技術検証</li>
                   <li>機械学習による従業員アンケートの業界横断的なトピック・感情分析</li>
                   <li>機械学習を活用した人事リスク因子の分析</li>
                   <li>人事データの基礎分析および可視化</li>
+                  <li>視聴覚アートの試作</li>
                   <li>その他多数</li>
                 </ul>
               </dd>
