--- a/en/index.html
+++ b/en/index.html
@@ -80,8 +80,8 @@
             </div>
             <!-- 取引先 -->
             <div class="info-item">
-              <dt class="label">Main Business Partners</dt>
-              <dd class="value">KNOT DATA, Inc.</dd>
+              <dt class="label">Bank</dt>
+              <dd class="value">PayPay Bank</dd>
             </div>
             <!-- 取り組み事例 -->
             <div class="info-item">
@@ -89,10 +89,11 @@
               <dd class="value">
                 <ul>
                   <li>Proof of Concept for Retrieval-Augmented Generation (RAG) System in a Closed Environment</li>
-                  <li>Proof of Concept for Text Summarization Task in a Closed Environment</li>
+                  <li>Proof of Technology for Text Summarization Task in a Closed Environment</li>
                   <li>Industry-wide Topic and Sentiment Analysis of Employee Surveys Using Machine Learning</li>
                   <li>Analysis of HR Risk Factors Using Machine Learning</li>
                   <li>Basic Analysis and Visualization of HR Data</li>
+                  <li>Prototype of Audiovisual Art</li>
                   <li>Many Others</li>
                 </ul>
               </dd>
