--- a/ja/index.html
+++ b/ja/index.html
@@ -49,7 +49,9 @@
             <!-- 所在地 -->
             <div class="info-item">
               <dt class="label">所在地</dt>
-              <dd class="value">東京都渋谷区渋谷2-19-15宮益坂ビルディング609</dd>
+              <dd class="value">
+                東京都渋谷区渋谷2-19-15宮益坂ビルディング609
+              </dd>
             </div>
             <!-- 設立年月日 -->
             <div class="info-item">
@@ -64,7 +66,9 @@
             <!-- 事業内容 -->
             <div class="info-item">
               <dt class="label">事業内容</dt>
-              <dd class="value">システム開発、データ分析、デジタルコンテンツ制作</dd>
+              <dd class="value">
+                システム開発、データ分析、デジタルコンテンツ制作
+              </dd>
             </div>
             <!-- 代表社員 -->
             <div class="info-item">
@@ -75,7 +79,9 @@
             <div class="info-item">
               <dt class="label">お問い合わせ</dt>
               <dd class="value">
-                <a href="mailto:contact@21-digital.co.jp">contact@21-digital.co.jp</a>
+                <a href="mailto:contact@21-digital.co.jp"
+                  >contact@21-digital.co.jp</a
+                >
               </dd>
             </div>
             <!-- 取引先 -->
@@ -88,9 +94,11 @@
               <dt class="label">取り組み事例</dt>
               <dd class="value">
                 <ul>
-                  <li>クローズド環境での検索拡張生成（RAG）システムの概念実証</li>
-                  <li>クローズド環境での文章要約タスクの技術検証</li>
-                  <li>機械学習による従業員アンケートの業界横断的なトピック・感情分析</li>
+                  <li>機密環境での検索拡張生成（RAG）システムの概念実証</li>
+                  <li>機密環境での文章要約タスクの技術検証</li>
+                  <li>
+                    機械学習による従業員アンケートの業界横断的なトピック・感情分析
+                  </li>
                   <li>機械学習を活用した人事リスク因子の分析</li>
                   <li>人事データの基礎分析および可視化</li>
                   <li>視聴覚アートの試作</li>
