--- a/en/index.html
+++ b/en/index.html
@@ -92,8 +92,9 @@
                   <li>Proof of Technology for Text Summarization Task in a Closed Environment</li>
                   <li>Industry-wide Topic and Sentiment Analysis of Employee Surveys Using Machine Learning</li>
                   <li>Analysis of HR Risk Factors Using Machine Learning</li>
-                  <li>Basic Analysis and Visualization of HR Data</li>
-                  <li>Prototype of Audiovisual Art</li>
+                  <li>Operational Support for Ad Operations Optimization Using a Swarm Intelligence Algorithm</li>
+                  <li>Attribution Analysis of Ad Delivery Logs Using Machine Learning</li>
+                  <li>Prototype of Media Art</li>
                   <li>Many Others</li>
                 </ul>
               </dd>
