--- a/ja/index.html
+++ b/ja/index.html
@@ -94,14 +94,15 @@
               <dt class="label">取り組み事例</dt>
               <dd class="value">
                 <ul>
-                  <li>機密環境での検索拡張生成（RAG）システムの概念実証</li>
-                  <li>機密環境での文章要約タスクの技術検証</li>
+                  <li>ローカル環境での検索拡張生成（RAG）システムの概念実証</li>
+                  <li>ローカル環境での文章要約タスクの技術選定</li>
                   <li>
                     機械学習による従業員アンケートの業界横断的なトピック・感情分析
                   </li>
                   <li>機械学習を活用した人事リスク因子の分析</li>
-                  <li>人事データの基礎分析および可視化</li>
-                  <li>視聴覚アートの試作</li>
+                  <li>群知能アルゴリズムを用いた広告運用最適化タスクの運用補助</li>
+                  <li>機械学習を活用した広告配信ログデータの寄与度分析</li>
+                  <li>メディアアートの試作</li>
                   <li>その他多数</li>
                 </ul>
               </dd>
