--- a/en/index.html
+++ b/en/index.html
@@ -49,7 +49,10 @@
             <!-- 所在地 -->
             <div class="info-item">
               <dt class="label">Location</dt>
-              <dd class="value">609 Miyamasuzaka Building, 2-19-15 Shibuya, Shibuya-ku, Tokyo, Japan</dd>
+              <dd class="value">
+                609 Miyamasuzaka Building, 2-19-15 Shibuya, Shibuya-ku, Tokyo,
+                Japan
+              </dd>
             </div>
             <!-- 設立年月日 -->
             <div class="info-item">
@@ -64,7 +67,9 @@
             <!-- 事業内容 -->
             <div class="info-item">
               <dt class="label">Main Business Activities</dt>
-              <dd class="value">System Development, Data Analysis, Digital Content Production</dd>
+              <dd class="value">
+                System Development, Data Analysis, Digital Content Production
+              </dd>
             </div>
             <!-- 代表社員 -->
             <div class="info-item">
@@ -75,27 +80,43 @@
             <div class="info-item">
               <dt class="label">Contact</dt>
               <dd class="value">
-                <a href="mailto:contact@21-digital.co.jp">contact@21-digital.co.jp</a>
+                <a href="mailto:contact@21-digital.co.jp"
+                  >contact@21-digital.co.jp</a
+                >
               </dd>
             </div>
-            <!-- 取引先 -->
+            <!-- 取引銀行 -->
             <div class="info-item">
               <dt class="label">Bank</dt>
               <dd class="value">PayPay Bank</dd>
             </div>
             <!-- 取り組み事例 -->
             <div class="info-item">
-              <dt class="label">Case Studies</dt>
+              <dt class="label">Case Studies (Selected Examples)</dt>
               <dd class="value">
                 <ul>
-                  <li>Proof of Concept for Retrieval-Augmented Generation (RAG) System in a Closed Environment</li>
-                  <li>Proof of Technology for Text Summarization Task in a Closed Environment</li>
-                  <li>Industry-wide Topic and Sentiment Analysis of Employee Surveys Using Machine Learning</li>
+                  <li>
+                    Proof of Concept for Retrieval-Augmented Generation (RAG)
+                    System in a Closed Environment
+                  </li>
+                  <li>
+                    Proof of Technology for Text Summarization Task in a Closed
+                    Environment
+                  </li>
+                  <li>
+                    Industry-wide Topic and Sentiment Analysis of Employee
+                    Surveys Using Machine Learning
+                  </li>
                   <li>Analysis of HR Risk Factors Using Machine Learning</li>
-                  <li>Operational Support for Ad Operations Optimization Using a Swarm Intelligence Algorithm</li>
-                  <li>Attribution Analysis of Ad Delivery Logs Using Machine Learning</li>
+                  <li>
+                    Operational Support for Ad Operations Optimization Using a
+                    Swarm Intelligence Algorithm
+                  </li>
+                  <li>
+                    Attribution Analysis of Ad Delivery Logs Using Machine
+                    Learning
+                  </li>
                   <li>Prototype of Media Art</li>
-                  <li>Many Others</li>
                 </ul>
               </dd>
             </div>
