--- a/ja/index.html
+++ b/ja/index.html
@@ -84,14 +84,14 @@
                 >
               </dd>
             </div>
-            <!-- 取引先 -->
+            <!-- 取引銀行 -->
             <div class="info-item">
               <dt class="label">取引銀行</dt>
               <dd class="value">PayPay銀行</dd>
             </div>
             <!-- 取り組み事例 -->
             <div class="info-item">
-              <dt class="label">取り組み事例</dt>
+              <dt class="label">取り組み事例（一部抜粋）</dt>
               <dd class="value">
                 <ul>
                   <li>ローカル環境での検索拡張生成（RAG）システムの概念実証</li>
@@ -100,10 +100,11 @@
                     機械学習による従業員アンケートの業界横断的なトピック・感情分析
                   </li>
                   <li>機械学習を活用した人事リスク因子の分析</li>
-                  <li>群知能アルゴリズムを用いた広告運用最適化タスクの運用補助</li>
+                  <li>
+                    群知能アルゴリズムを用いた広告運用最適化タスクの運用補助
+                  </li>
                   <li>機械学習を活用した広告配信ログデータの寄与度分析</li>
                   <li>メディアアートの試作</li>
-                  <li>その他多数</li>
                 </ul>
               </dd>
             </div>
