--- a/en/index.html
+++ b/en/index.html
@@ -68,7 +68,7 @@
             <div class="info-item">
               <dt class="label">Main Business Activities</dt>
               <dd class="value">
-                System Development, Data Analysis, Digital Content Production
+                System Development, Data Analysis, Digital Content Production, Research and Development
               </dd>
             </div>
             <!-- 代表社員 -->
