--- a/ja/index.html
+++ b/ja/index.html
@@ -67,7 +67,7 @@
             <div class="info-item">
               <dt class="label">事業内容</dt>
               <dd class="value">
-                システム開発、データ分析、デジタルコンテンツ制作
+                システム開発、データ分析、デジタルコンテンツ制作、研究開発
               </dd>
             </div>
             <!-- 代表社員 -->
